Version 1.3.0 - xx xxx 2008

  * Converted the http client model to allow for parallel
    search requests. Ticket #73.

  * Added RETS 1.7 checks to example code. Ticket #58.

  * Propagate Rets Exceptions up to PHP. Ticket #81.

  * Throw an exception when trying to dereference a null
    URL. Ticket #84.

  * Add RetsSession::MODE_NO_SSL_VERIFY to disable SSL
    verification. Ticket #87.

Version 1.2.5 - 26 Nov 2008

  * Expose RETS_XML_UTF8_ENCODING to SWIG languages.
    Ticket #80.

  * Expose RetsSession::SetTimeout() to SWIG languages.
    Ticket #82.

  * Added "Y" as a valid value for truth in boolean comparisons in
    MetadataElements.

Version 1.2.4 - 17 Nov 2008

  * Add RetsSession.SetModeFlags to allow caching to be enabled
    in streaming mode (RetsSession::MODE_CACHE), to disable
    streaming mode (RetsSession::MODE_NO_STREAM), and to disable
    the "Expect: 100 Continue" header (RetsSession::MODE_NO_EXPECT).
    Tickets #59, #77 and #79.

  * Add RetsSession.SetTimeout() to establish a timeout value
    with libCURL. Ticket #68.

  * Add UTF-8 as an accetable character encoding.
    Ticket #80.

Version 1.2.3 - 9 Sep 2008

  * Added test-network target and httpServer to test actual 
    network activity in the test harness. Tickets #70 and #74.

  * Expose RetsSession.SetHttpLogName() to all languages. Ticket #71.

Version 1.2.2 - 29 Aug 2008

  * Updated KeyValueResponse parsing to allow for ISO characters.
    Ticket #40.

  * Consider http response of "0" to be successful. It is possible
    with the streaming enhancement to see no status if the http
    transaction hasn't yet completed. Ticket #62.

  * Correct regression with logging GetObject calls per Ticket #36.
    The streaming enhancement caused GetObject calls to always be
    logged.
    Ticket #63.

  * Enhanced .NET Search to include switch configurable options
    such that it can be included for debugging purposes on the